Fixed GridSearch params

--- a/fingerprinting_classification.ipynb
+++ b/fingerprinting_classification.ipynb
@@ -137,13 +137,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "outputs": [],
    "source": [
     "def get_trained_with_hyperparams(model,params,X_train,Y_train):\n",
     "    gsrch = GridSearchCV(estimator = model(),param_grid=params,scoring=\"accuracy\",cv=5,n_jobs=-1)\n",
     "    gsrch.fit(X_train,Y_train)\n",
-    "    return model(gsrch.param_grid()).fit(X_train,Y_train)\n",
+    "    return model(**gsrch.best_params_).fit(X_train,Y_train)\n",
     "\n",
     "def show_scores(model,X_test,Y_test):\n",
     "    predicted = model.predict(X_test)\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "outputs": [
     {
      "data": {
@@ -189,7 +189,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 47
+     "execution_count": 50
     },
     {
      "name": "stdout",
