--- a/fingerprinting_classification.ipynb
+++ b/fingerprinting_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -32,6 +32,8 @@
     "import heapq\n",
     "import shap\n",
     "import numpy as np\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "# from skmultilearn.problem_transform import LabelPowerset\n",
     "\n",
     "shap.initjs()"
    ]
@@ -269,17 +271,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 53,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Number of mislabeled points out of a total 2400 points : 1665\n",
+      "Number of points not in top 5 predicted probabilities total points: 2400; failed: 266\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
     "show_scores(model,X_test,Y_test)\n",
-    "explainer= shap.LinearExplainer(model,X_train)"
+    "explainer= shap.LinearExplainer(model,X_train)\n",
+    "# TODO: visualize with shap"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
-     "is_executing": true
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "RandomForestClassifier(bootstrap=True, ccp_alpha=0.0, class_weight=None,\n                       criterion='gini', max_depth=None, max_features='auto',\n                       max_leaf_nodes=None, max_samples=None,\n                       min_impurity_decrease=0.0, min_impurity_split=None,\n                       min_samples_leaf=1, min_samples_split=2,\n                       min_weight_fraction_leaf=0.0, n_estimators=100,\n                       n_jobs=None, oob_score=False, random_state=None,\n                       verbose=0, warm_start=False)"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 59
+    },
+    {
+     "name": "stdout",
+     "text": [
+      "Number of mislabeled points out of a total 2400 points : 53\n",
+      "Number of points not in top 5 predicted probabilities total points: 2400; failed: 8\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "model_rfc = RandomForestClassifier()\n",
+    "model_rfc.fit(X_train,Y_train)\n",
+    "show_scores(model_rfc,X_test,Y_test)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
     }
    }
   },
@@ -293,8 +339,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   }
