Added RandomForest and SVM to Classifier Chain testing

--- a/fingerprinting_classification.ipynb
+++ b/fingerprinting_classification.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "dfRaw.drop([\"Point\"],axis=1,inplace=True)\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "def get_trained_with_hyperparams(model,params,X_train,Y_train):\n",
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -647,22 +647,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "outputs": [
+    {
+     "data": {
+      "text/plain": "SVC(C=15, break_ties=False, cache_size=200, class_weight=None, coef0=0.0,\n    decision_function_shape='ovr', degree=3, gamma='scale', kernel='rbf',\n    max_iter=-1, probability=True, random_state=42, shrinking=True, tol=0.001,\n    verbose=False)"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 21
+    },
     {
      "name": "stdout",
      "text": [
-      "Number of mislabeled points out of a total 2400 points : 80\n",
-      "Number of points not in top 5 predicted probabilities total points: 2400; failed: 7\n"
+      "Number of mislabeled points out of a total 2400 points : 66\n",
+      "Number of points not in top 5 predicted probabilities total points: 2400; failed: 9\n"
      ],
      "output_type": "stream"
     }
    ],
    "source": [
     "# TODO: Write more detail on SVC kernel\n",
-    "model_svc = SVC(random_state=42, C=15)\n",
-    "classifier = CalibratedClassifierCV(model_svc).fit(X_train,Y_train)\n",
-    "show_scores(classifier,X_test,Y_test)"
+    "model_svc = SVC(random_state=42, C=15, probability=True)\n",
+    "model_svc.fit(X_train,Y_train)\n",
+    "show_scores(model_svc,X_test,Y_test)"
    ],
    "metadata": {
     "collapsed": false,
@@ -796,8 +804,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 31,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Number of mislabeled points out of a total 2400 points : 54\n",
+      "Number of points not in top 5 predicted probabilities total points: 2400; failed: 3\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
     "model_xgb = XGBClassifier(random_state=42, max_depth=10).fit(X_train, Y_train)\n",
     "\n",
@@ -807,7 +824,7 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
-     "is_executing": true
+     "is_executing": false
     }
    }
   },
@@ -824,8 +841,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 32,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Importance of corresponding RSSI beacons: 0.45, 0.27, 0.28\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
     "print(\"Importance of corresponding RSSI beacons: %.2f, %.2f, %.2f\" % (model_xgb.feature_importances_[0], \n",
     "                                                                      model_xgb.feature_importances_[1], \n",
@@ -835,7 +860,7 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
-     "is_executing": true
+     "is_executing": false
     }
    }
   },
@@ -896,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "def show_classifier_chain_error(model):\n",
@@ -922,12 +947,99 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### XGBoost\n",
+    "### Support Vector Machine\n",
+    "\n",
+    "Suprisinly, but transforming to multilabel problem only ruined our accuracy. We can explain it by the\n",
+    "fact, that as we use rbf kernel, and not linear, then transforming label to linear doesn't give us\n",
+    "any advantage. Moreover, as now we are predicting x and y nearly independetly it doesn't give model\n",
+    "the same amount of information, as previously."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Number of mislabeled points out of a total 2400 points : 299\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "model_chain_svc = show_classifier_chain_error(SVC(random_state=42, C=15, probability=True))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Random forest\n",
     "\n",
     "We can see, transforming our problem to multilabel helped to improve accuracy. But more importantly, we \n",
     "can look on the feature importance of and see __*0*__ and __*1*__  beacons are mostly used to predict\n",
     "y coordiante. So our model is just calculating how far point is from __*01*__ line formed by two beacos.\n",
     "But for x coordinate all the beacons are nearly equal, except for a little more importance on __*1*__ beacon."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Number of mislabeled points out of a total 2400 points : 56\n",
+      "Importance of corresponding RSSI beacons for x coordinate: 0.31, 0.34, 0.35\n",
+      "Importance of corresponding RSSI beacons for y coordinate: 0.33, 0.32, 0.21\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "model_chain_rfc = show_classifier_chain_error(RandomForestClassifier(random_state=42, max_depth=10))\n",
+    "\n",
+    "print(\"Importance of corresponding RSSI beacons for x coordinate: %.2f, %.2f, %.2f\" % (model_chain_rfc.estimators_[0].feature_importances_[0],\n",
+    "                                                                      model_chain_rfc.estimators_[0].feature_importances_[1], \n",
+    "                                                                      model_chain_rfc.estimators_[0].feature_importances_[2]))\n",
+    "\n",
+    "print(\"Importance of corresponding RSSI beacons for y coordinate: %.2f, %.2f, %.2f\" % (model_chain_rfc.estimators_[1].feature_importances_[0],\n",
+    "                                                                      model_chain_rfc.estimators_[1].feature_importances_[1], \n",
+    "                                                                      model_chain_rfc.estimators_[1].feature_importances_[2]))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### XGBoost\n",
+    "\n",
+    "We can see, that result of problem transformation is the same, as for Random forest"
    ],
    "metadata": {
     "collapsed": false,
