--- a/fingerprinting_classification.ipynb
+++ b/fingerprinting_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -246,42 +246,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>25</td>\n",
-       "      <td>46</td>\n",
-       "      <td>33</td>\n",
-       "      <td>8</td>\n",
+       "      <td>-70</td>\n",
+       "      <td>-49</td>\n",
+       "      <td>-62</td>\n",
+       "      <td>s8</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>33</td>\n",
-       "      <td>49</td>\n",
-       "      <td>36</td>\n",
-       "      <td>8</td>\n",
+       "      <td>-62</td>\n",
+       "      <td>-46</td>\n",
+       "      <td>-59</td>\n",
+       "      <td>s8</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>33</td>\n",
-       "      <td>49</td>\n",
-       "      <td>36</td>\n",
-       "      <td>8</td>\n",
+       "      <td>-62</td>\n",
+       "      <td>-46</td>\n",
+       "      <td>-59</td>\n",
+       "      <td>s8</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>33</td>\n",
-       "      <td>49</td>\n",
-       "      <td>37</td>\n",
-       "      <td>8</td>\n",
+       "      <td>-62</td>\n",
+       "      <td>-46</td>\n",
+       "      <td>-58</td>\n",
+       "      <td>s8</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>33</td>\n",
-       "      <td>49</td>\n",
-       "      <td>37</td>\n",
-       "      <td>8</td>\n",
+       "      <td>-62</td>\n",
+       "      <td>-46</td>\n",
+       "      <td>-58</td>\n",
+       "      <td>s8</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -289,15 +289,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   Server-RSSI-1  Server-RSSI-2  Server-RSSI-3  Square  Point\n",
-       "0             25             46             33       8      0\n",
-       "1             33             49             36       8      0\n",
-       "2             33             49             36       8      0\n",
-       "3             33             49             37       8      0\n",
-       "4             33             49             37       8      0"
+       "   Server-RSSI-1  Server-RSSI-2  Server-RSSI-3 Square  Point\n",
+       "0            -70            -49            -62     s8      0\n",
+       "1            -62            -46            -59     s8      0\n",
+       "2            -62            -46            -59     s8      0\n",
+       "3            -62            -46            -58     s8      0\n",
+       "4            -62            -46            -58     s8      0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For better understanding, how points are distributed you can use script `py_utils/fingerprinting_visualization.py`, where you can see 3d visualization, where each axis is RSSI level and the color of the dot is the square.\n",
+    "For better understanding, how points are distributed you can use script\n",
+    "[`py_utils/fingerprinting_visualization.py`](py_utils/fingerprinting_visualization.py), where you can see 3d visualization, \n",
+    "where each axis is RSSI level and the color of the dot is the square.\n",
     "\n",
     "Example:\n",
     "![visualization](photos/fingerprinting/visualization_example.jpg)\n",
@@ -479,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -512,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -1415,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "is_executing": true,
@@ -1443,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1456,8 +1458,13 @@
     "    results = defaultdict(int)\n",
     "    for i in range(X_test.shape[0]):\n",
     "        results[y_test[i]] += y_test[i] != predicted[i]\n",
-    "    for point, errors in results.items():\n",
-    "        print(\"Square %2d has accuracy: %.2f\" % (point, 1-errors/200))"
+    "        \n",
+    "    print(\"Accuracy of classifier for each square: \", end=\"\")\n",
+    "    for sq in range(len(results)):\n",
+    "        if sq % 3 == 0:\n",
+    "            print()\n",
+    "        print(\"%.2f\" % (1-results[sq]/200), end=\" \")\n",
+    "    print()"
    ]
   },
   {
@@ -1473,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1482,18 +1489,11 @@
      "text": [
       "Number of mislabeled points out of a total 2400 points : 1840\n",
       "Number of points not in top 5 predicted probabilities total points: 2400; failed: 692\n",
-      "Square  8 has accuracy: 0.00\n",
-      "Square  7 has accuracy: 0.94\n",
-      "Square 11 has accuracy: 0.00\n",
-      "Square  1 has accuracy: 0.44\n",
-      "Square  0 has accuracy: 0.00\n",
-      "Square  6 has accuracy: 0.01\n",
-      "Square 10 has accuracy: 0.00\n",
-      "Square  3 has accuracy: 0.04\n",
-      "Square  5 has accuracy: 0.89\n",
-      "Square  4 has accuracy: 0.00\n",
-      "Square  2 has accuracy: 0.00\n",
-      "Square  9 has accuracy: 0.49\n"
+      "Accuracy of classifier for each square: \n",
+      "0.00 0.44 0.00 \n",
+      "0.04 0.00 0.89 \n",
+      "0.01 0.94 0.00 \n",
+      "0.49 0.00 0.00 \n"
      ]
     }
    ],
@@ -1522,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -1536,18 +1536,11 @@
      "text": [
       "Number of mislabeled points out of a total 2400 points : 1960\n",
       "Number of points not in top 5 predicted probabilities total points: 2400; failed: 733\n",
-      "Square  8 has accuracy: 0.02\n",
-      "Square  7 has accuracy: 0.97\n",
-      "Square 11 has accuracy: 0.00\n",
-      "Square  1 has accuracy: 0.34\n",
-      "Square  0 has accuracy: 0.01\n",
-      "Square  6 has accuracy: 0.00\n",
-      "Square 10 has accuracy: 0.01\n",
-      "Square  3 has accuracy: 0.00\n",
-      "Square  5 has accuracy: 0.00\n",
-      "Square  4 has accuracy: 0.00\n",
-      "Square  2 has accuracy: 0.67\n",
-      "Square  9 has accuracy: 0.19\n"
+      "Accuracy of classifier for each square: \n",
+      "0.01 0.34 0.67 \n",
+      "0.00 0.00 0.00 \n",
+      "0.00 0.97 0.02 \n",
+      "0.19 0.01 0.00 \n"
      ]
     }
    ],
@@ -1570,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 57,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -1584,18 +1577,11 @@
      "text": [
       "Number of mislabeled points out of a total 2400 points : 1797\n",
       "Number of points not in top 5 predicted probabilities total points: 2400; failed: 807\n",
-      "Square  8 has accuracy: 0.00\n",
-      "Square  7 has accuracy: 0.45\n",
-      "Square 11 has accuracy: 0.00\n",
-      "Square  1 has accuracy: 0.42\n",
-      "Square  0 has accuracy: 0.01\n",
-      "Square  6 has accuracy: 0.00\n",
-      "Square 10 has accuracy: 0.00\n",
-      "Square  3 has accuracy: 0.00\n",
-      "Square  5 has accuracy: 0.99\n",
-      "Square  4 has accuracy: 0.00\n",
-      "Square  2 has accuracy: 0.62\n",
-      "Square  9 has accuracy: 0.52\n"
+      "Accuracy of classifier for each square: \n",
+      "0.01 0.42 0.62 \n",
+      "0.00 0.00 0.99 \n",
+      "0.00 0.45 0.00 \n",
+      "0.52 0.00 0.00 \n"
      ]
     }
    ],
@@ -1619,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 58,
    "metadata": {
     "pycharm": {
      "is_executing": true,
@@ -1633,18 +1619,11 @@
      "text": [
       "Number of mislabeled points out of a total 2400 points : 1973\n",
       "Number of points not in top 5 predicted probabilities total points: 2400; failed: 530\n",
-      "Square  8 has accuracy: 0.08\n",
-      "Square  7 has accuracy: 0.17\n",
-      "Square 11 has accuracy: 0.00\n",
-      "Square  1 has accuracy: 0.43\n",
-      "Square  0 has accuracy: 0.01\n",
-      "Square  6 has accuracy: 0.00\n",
-      "Square 10 has accuracy: 0.00\n",
-      "Square  3 has accuracy: 0.00\n",
-      "Square  5 has accuracy: 0.99\n",
-      "Square  4 has accuracy: 0.01\n",
-      "Square  2 has accuracy: 0.39\n",
-      "Square  9 has accuracy: 0.06\n"
+      "Accuracy of classifier for each square: \n",
+      "0.01 0.43 0.39 \n",
+      "0.00 0.01 0.99 \n",
+      "0.00 0.17 0.08 \n",
+      "0.06 0.00 0.00 \n"
      ]
     }
    ],
@@ -1665,10 +1644,19 @@
     "# Summary\n",
     "\n",
     "To sum up, we can make next conclusions:\n",
-    "- we need to have bigger dataset, that will have more points, even if the amount of samples per one point will be less\n",
+    "- We need to have bigger dataset, that will have more points, even if the amount of samples per one point will be less\n",
+    "- Generally, transforming into multilabel problem harm more, that help for most classifiers\n",
     "- taking into account last test, we have predicted some squares with accuracy 0.3 - 0.7, so the usage of some filtering algorithms would be beneficial\n",
-    "- generally, transforming into multilabel problem harm more, that help for most classifiers\n"
+    "- Also, looking last test, we can see, that classifiers predict only on the diagonal with the corner at beacon 2, so it will be good idea try to repeat the same experiment with at least 4 beacons\n",
+    "- While gathering data, we placed them in random position and it could give us bad understanding of the situation, so in the next time we need to add new column to our dataset to know \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
