Added comments to regression

--- a/regression_based_approach.ipynb
+++ b/regression_based_approach.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,16 +105,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f200aa6fd60>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb0b6832700>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -155,12 +155,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "//TODO: write about regression based approach, and how it can help us"
+    "## Data processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "During classification we have encountered with problem, that information about correct/uncorrect squares are not enough for understanding. More naturaly for localization to see error, as difference between true point and predicted in 2D plain. To do so, we wanted to try Regression based approach, where we will be predicting **x** and **y** coordinates."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To do so we will use the fact, that while collecting data for fingerprinting 10 points where chosen not randomly but with next scheme:\n",
+    "\n",
+    "![Subsquare division](./photos/fingerprinting_2/sub_square_division.png)\n",
+    "\n",
+    "as square naturally divides into 9 points, we have done so, and tenth point was just measured a little bit lefter."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,12 +190,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "//TODO: write why we add last element to s1 and s2"
+    "During the data gathering for 2 and 3 squares (s1 and s2) we have lost 1 orientation measurement (100 samples). As each subsequnt measurement is very similar to previous one and we don't use **Orientation** for predicting, then we can just duplicate the last 100 samples to have our data equable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,18 +213,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#TODO: explain why we can add coordinates in such way\n",
-    "df = add_coordinates(df)"
+    "So, to get specific coordinates for each of 10 points in plain (for each we have measured 100 samples in 4 orientations) we will use next info:\n",
+    "\n",
+    "- size of stool, on which was microcontroller was 40x40 cm\n",
+    "- stool was aligned to side of square or placed in center between two sides\n",
+    "- the order of points in square:\n",
+    "<pre>\n",
+    "  1    2    3\n",
+    "  8    9 10 4\n",
+    "  7    6    5\n",
+    "</pre>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +346,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47995</th>\n",
+       "      <th>48195</th>\n",
        "      <td>-64</td>\n",
        "      <td>-64</td>\n",
        "      <td>-74</td>\n",
@@ -335,7 +359,7 @@
        "      <td>350</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47996</th>\n",
+       "      <th>48196</th>\n",
        "      <td>-63</td>\n",
        "      <td>-65</td>\n",
        "      <td>-72</td>\n",
@@ -348,7 +372,7 @@
        "      <td>350</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47997</th>\n",
+       "      <th>48197</th>\n",
        "      <td>-63</td>\n",
        "      <td>-65</td>\n",
        "      <td>-72</td>\n",
@@ -361,7 +385,7 @@
        "      <td>350</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47998</th>\n",
+       "      <th>48198</th>\n",
        "      <td>-63</td>\n",
        "      <td>-65</td>\n",
        "      <td>-72</td>\n",
@@ -374,7 +398,7 @@
        "      <td>350</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47999</th>\n",
+       "      <th>48199</th>\n",
        "      <td>-63</td>\n",
        "      <td>-64</td>\n",
        "      <td>-73</td>\n",
@@ -388,7 +412,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>48000 rows × 10 columns</p>\n",
+       "<p>48200 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -399,11 +423,11 @@
        "3                -57            -64            -57            -48   \n",
        "4                -57            -65            -57            -48   \n",
        "...              ...            ...            ...            ...   \n",
-       "47995            -64            -64            -74            -53   \n",
-       "47996            -63            -65            -72            -53   \n",
-       "47997            -63            -65            -72            -54   \n",
-       "47998            -63            -65            -72            -53   \n",
-       "47999            -63            -64            -73            -54   \n",
+       "48195            -64            -64            -74            -53   \n",
+       "48196            -63            -65            -72            -53   \n",
+       "48197            -63            -65            -72            -54   \n",
+       "48198            -63            -65            -72            -53   \n",
+       "48199            -63            -64            -73            -54   \n",
        "\n",
        "       Server-RSSI-5 Square  Point  Orientation    x    y  \n",
        "0                -58     s0      0          0.0   20  380  \n",
@@ -412,27 +436,28 @@
        "3                -58     s0      0          0.0   20  380  \n",
        "4                -58     s0      0          0.0   20  380  \n",
        "...              ...    ...    ...          ...  ...  ...  \n",
-       "47995            -35     s2     39          3.0  254  350  \n",
-       "47996            -35     s2     39          3.0  254  350  \n",
-       "47997            -35     s2     39          3.0  254  350  \n",
-       "47998            -35     s2     39          3.0  254  350  \n",
-       "47999            -35     s2     39          3.0  254  350  \n",
+       "48195            -35     s2     39          3.0  254  350  \n",
+       "48196            -35     s2     39          3.0  254  350  \n",
+       "48197            -35     s2     39          3.0  254  350  \n",
+       "48198            -35     s2     39          3.0  254  350  \n",
+       "48199            -35     s2     39          3.0  254  350  \n",
        "\n",
-       "[48000 rows x 10 columns]"
+       "[48200 rows x 10 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = add_coordinates(df)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,8 +466,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To handle, that we need to find **x** and **y** coordinates, we will use MultiOuputRegressor, which will just make one regressor for each target column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we wanted to use Decision based regression, as it is very similar to classification (it is actually classifacation), but model will divide continious space on bins by itself, so we don't need to think is it better to have square with 1 m side length or 10 cm."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -470,17 +516,7 @@
        "                     n_jobs=None)"
       ]
      },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "75.89440988626745"
-      ]
-     },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,14 +525,39 @@
     "model = MultiOutputRegressor(XGBRegressor(min_child_weight=2, max_depth=10))\n",
     "\n",
     "model.fit(X_train, y_train)\n",
-    "predicted = model.predict(X_val)\n",
-    "\n",
-    "mean_absolute_error(y_val, predicted)"
+    "predicted = model.predict(X_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66.29709893716348"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_absolute_error(y_val, predicted)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "//TODO: Add visualizations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -529,38 +590,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>20</td>\n",
-       "      <td>380</td>\n",
-       "      <td>64.475754</td>\n",
-       "      <td>315.462219</td>\n",
+       "      <td>40</td>\n",
+       "      <td>320</td>\n",
+       "      <td>80.051346</td>\n",
+       "      <td>189.628128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>20</td>\n",
-       "      <td>380</td>\n",
-       "      <td>229.271637</td>\n",
-       "      <td>264.435577</td>\n",
+       "      <td>40</td>\n",
+       "      <td>320</td>\n",
+       "      <td>76.615173</td>\n",
+       "      <td>302.347382</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>20</td>\n",
-       "      <td>380</td>\n",
-       "      <td>92.713837</td>\n",
-       "      <td>330.200592</td>\n",
+       "      <td>40</td>\n",
+       "      <td>320</td>\n",
+       "      <td>71.805153</td>\n",
+       "      <td>297.889465</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>20</td>\n",
-       "      <td>380</td>\n",
-       "      <td>219.377655</td>\n",
-       "      <td>275.735565</td>\n",
+       "      <td>40</td>\n",
+       "      <td>320</td>\n",
+       "      <td>71.754280</td>\n",
+       "      <td>294.852142</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>20</td>\n",
-       "      <td>380</td>\n",
-       "      <td>242.895630</td>\n",
-       "      <td>274.394073</td>\n",
+       "      <td>40</td>\n",
+       "      <td>320</td>\n",
+       "      <td>73.214645</td>\n",
+       "      <td>287.504089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -571,38 +632,38 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>95</th>\n",
-       "      <td>20</td>\n",
-       "      <td>380</td>\n",
-       "      <td>238.589066</td>\n",
-       "      <td>281.340240</td>\n",
+       "      <td>40</td>\n",
+       "      <td>320</td>\n",
+       "      <td>74.623985</td>\n",
+       "      <td>319.025848</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
-       "      <td>20</td>\n",
-       "      <td>380</td>\n",
-       "      <td>238.589066</td>\n",
-       "      <td>281.340240</td>\n",
+       "      <td>40</td>\n",
+       "      <td>320</td>\n",
+       "      <td>79.255249</td>\n",
+       "      <td>286.644592</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
-       "      <td>20</td>\n",
-       "      <td>380</td>\n",
-       "      <td>242.177719</td>\n",
-       "      <td>266.334930</td>\n",
+       "      <td>40</td>\n",
+       "      <td>320</td>\n",
+       "      <td>70.445801</td>\n",
+       "      <td>294.084656</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
-       "      <td>20</td>\n",
-       "      <td>380</td>\n",
-       "      <td>238.452118</td>\n",
-       "      <td>273.885620</td>\n",
+       "      <td>40</td>\n",
+       "      <td>320</td>\n",
+       "      <td>72.457169</td>\n",
+       "      <td>300.666870</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
-       "      <td>20</td>\n",
-       "      <td>380</td>\n",
-       "      <td>241.893936</td>\n",
-       "      <td>252.135025</td>\n",
+       "      <td>40</td>\n",
+       "      <td>320</td>\n",
+       "      <td>80.045662</td>\n",
+       "      <td>327.580627</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -611,22 +672,22 @@
       ],
       "text/plain": [
        "     x    y  predicted_x  predicted_y\n",
-       "0   20  380    64.475754   315.462219\n",
-       "1   20  380   229.271637   264.435577\n",
-       "2   20  380    92.713837   330.200592\n",
-       "3   20  380   219.377655   275.735565\n",
-       "4   20  380   242.895630   274.394073\n",
+       "0   40  320    80.051346   189.628128\n",
+       "1   40  320    76.615173   302.347382\n",
+       "2   40  320    71.805153   297.889465\n",
+       "3   40  320    71.754280   294.852142\n",
+       "4   40  320    73.214645   287.504089\n",
        "..  ..  ...          ...          ...\n",
-       "95  20  380   238.589066   281.340240\n",
-       "96  20  380   238.589066   281.340240\n",
-       "97  20  380   242.177719   266.334930\n",
-       "98  20  380   238.452118   273.885620\n",
-       "99  20  380   241.893936   252.135025\n",
+       "95  40  320    74.623985   319.025848\n",
+       "96  40  320    79.255249   286.644592\n",
+       "97  40  320    70.445801   294.084656\n",
+       "98  40  320    72.457169   300.666870\n",
+       "99  40  320    80.045662   327.580627\n",
        "\n",
        "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,6 +697,13 @@
     "              \"y\": y_val[\"y\"].values,\n",
     "              'predicted_x': predicted[:, 0], \n",
     "              'predicted_y': predicted[:, 1]}).iloc[:100]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results"
    ]
   },
   {
