--- a/regression_based_approach.ipynb
+++ b/regression_based_approach.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Try to approximate theoretical maximum"
+    "# Approximating theoretical maximum accuracy"
    ]
   },
   {
