Added more regression and hyperparameter tuning

--- a/notebooks/regression_based_approach_copy.ipynb
+++ b/notebooks/regression_based_approach_copy.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'utils'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-5260e5d5c328>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mxgboost\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mXGBClassifier\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mXGBRegressor\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mutils\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msplit_data_regression\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0madd_coordinates\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mwarnings\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'utils'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from itertools import chain\n",
     "from collections import defaultdict, Counter\n",
@@ -34,11 +22,14 @@
     "from sklearn.multioutput import MultiOutputRegressor\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "\n",
-    "from sklearn.svm import SVC\n",
+    "from sklearn.svm import SVR\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from xgboost import XGBClassifier, XGBRegressor\n",
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "from utils import split_data_regression, add_coordinates\n",
+    "\n",
+    "from hyperopt import fmin, tpe, hp, STATUS_OK, Trials\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -48,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +347,7 @@
        "[48000 rows x 10 columns]"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +390,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# minimizing distance\n",
+    "def model_accuracy(params,model,train_data,train_labels,cv_data,cv_labels):\n",
+    "    model = MultiOutputRegressor(model(**params))\n",
+    "    model.fit(train_data, train_labels)\n",
+    "    preds = model.predict(cv_data)\n",
+    "    return {'loss': np.mean(np.apply_along_axis(lambda x: (x[0]**2 + x[1]**2)**0.5, 1, np.abs(preds - cv_labels))), 'status': STATUS_OK}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|█| 50/50 [02:45<00:00,  3.30s/trial, b\n",
+      "Best parameters: \n",
+      "eta 0.031067719583302122\n",
+      "gamma 0.6239296575409805\n",
+      "max_depth 10\n",
+      "min_child_weight 0.360699687865366\n",
+      "sampling_method 0\n",
+      "subsample 0.0038370187252436128\n"
+     ]
+    }
+   ],
+   "source": [
+    "# setting the space\n",
+    "xgb_fspace = {\n",
+    "    'eta':hp.uniform('eta', 0.01, 1),\n",
+    "    'gamma':hp.uniform('gamma', 0.01, 1),\n",
+    "    'max_depth':hp.choice('max_depth', np.arange(3, 20, dtype=int)),\n",
+    "    'min_child_weight': hp.uniform('min_child_weight', 0, 1),\n",
+    "    'subsample': hp.uniform('subsample', 0, 1), \n",
+    "    'sampling_method': hp.choice('sampling_method', ['gradient_based', 'uniform'])\n",
+    "}\n",
+    "\n",
+    "xgb_accuracy = lambda x:model_accuracy(x,model=XGBRegressor,train_data=X_train,train_labels=y_train,cv_data=X_val,cv_labels=y_val)\n",
+    "trials = Trials()\n",
+    "best_xgb = fmin(\n",
+    "    fn=xgb_accuracy,\n",
+    "    space=xgb_fspace,\n",
+    "    algo=tpe.suggest,\n",
+    "    max_evals=50, trials=trials, rstate=np.random.RandomState(0))\n",
+    "\n",
+    "print('Best parameters: ')\n",
+    "for param in best_xgb:\n",
+    "    print(param, best_xgb[param])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -408,55 +457,93 @@
        "MultiOutputRegressor(estimator=XGBRegressor(base_score=None, booster=None,\n",
        "                                            colsample_bylevel=None,\n",
        "                                            colsample_bynode=None,\n",
-       "                                            colsample_bytree=None, gamma=None,\n",
+       "                                            colsample_bytree=None,\n",
+       "                                            eta=0.031067719583302122,\n",
+       "                                            gamma=0.6239296575409805,\n",
        "                                            gpu_id=None, importance_type='gain',\n",
        "                                            interaction_constraints=None,\n",
        "                                            learning_rate=None,\n",
        "                                            max_delta_step=None, max_depth=10,\n",
-       "                                            min_child_weight=2, missing=nan,\n",
+       "                                            min_child_weight=0.360699687865366,\n",
+       "                                            missing=nan,\n",
        "                                            monotone_constraints=None,\n",
        "                                            n_estimators=100, n_jobs=None,\n",
        "                                            num_parallel_tree=None,\n",
        "                                            objective='reg:squarederror',\n",
-       "                                            random_state=None, reg_alpha=None,\n",
-       "                                            reg_lambda=None,\n",
+       "                                            random_state=42, reg_alpha=None,\n",
+       "                                            reg_lambda=None, sampling_method=0,\n",
        "                                            scale_pos_weight=None,\n",
-       "                                            subsample=None, tree_method=None,\n",
+       "                                            subsample=0.0038370187252436128,\n",
+       "                                            tree_method=None,\n",
        "                                            validate_parameters=False,\n",
        "                                            verbosity=None),\n",
        "                     n_jobs=None)"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = MultiOutputRegressor(XGBRegressor(min_child_weight=2, max_depth=10))\n",
+    "model_xgb = MultiOutputRegressor(XGBRegressor(**best_xgb,random_state=42))\n",
     "\n",
-    "model.fit(X_train, y_train)\n",
-    "predicted = model.predict(X_val)"
+    "model_xgb.fit(X_train, y_train)\n",
+    "predicted_xgb = model_xgb.predict(X_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "65.50466651030713"
+       "104.4903269204074"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mean_absolute_error(y_val, predicted)"
+    "np.mean(np.apply_along_axis(lambda x: (x[0]**2 + x[1]**2)**0.5, 1, np.abs(predicted_xgb - y_val)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  4%| | 2/50 [00:04<01:41,  2.12s/trial, be"
+     ]
+    }
+   ],
+   "source": [
+    "rf_fspace = {\n",
+    "    'max_depth':hp.choice('max_depth', np.arange(3, 20, dtype=int)),\n",
+    "    'max_features': hp.choice('max_features', np.arange(1,5,dtype=int)),\n",
+    "    'n_estimators': hp.choice('n_estimators', np.arange(100,201,50)),\n",
+    "    'criterion': hp.choice('criterion', [\"mse\",\"mae\"])\n",
+    "}\n",
+    "\n",
+    "rf_accuracy = lambda x:model_accuracy(x,model=RandomForestRegressor,train_data=X_train,train_labels=y_train,cv_data=X_val,cv_labels=y_val)\n",
+    "trials = Trials()\n",
+    "best_rf = fmin(\n",
+    "    fn=rf_accuracy,\n",
+    "    space=rf_fspace,\n",
+    "    algo=tpe.suggest,\n",
+    "    max_evals=50, trials=trials, rstate=np.random.RandomState(0))\n",
+    "\n",
+    "print('Best parameters: ')\n",
+    "for param in best_rf:\n",
+    "    print(param, best_rf[param])"
    ]
   },
   {
@@ -465,10 +552,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = MultiOutputRegressor(XGBRegressor(min_child_weight=2, max_depth=10))\n",
+    "model_rf = MultiOutputRegressor(RandomForestRegressor(**best_rf,random_state=42))\n",
     "\n",
-    "model.fit(X_train, y_train)\n",
-    "predicted = model.predict(X_val)"
+    "model_rf.fit(X_train, y_train)\n",
+    "predicted_rf = model_rf.predict(X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.mean(np.apply_along_axis(lambda x: (x[0]**2 + x[1]**2)**0.5, 1, np.abs(predicted_rf - y_val)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = MinMaxScaler()\n",
+    "numeric = ['Server-RSSI-1', 'Server-RSSI-2', 'Server-RSSI-3', 'Server-RSSI-4','Server-RSSI-5']\n",
+    "X_train[numeric] = scaler.fit_transform(X_train[numeric])\n",
+    "X_test[numeric] = scaler.transform(X_test[numeric])\n",
+    "X_val[numeric] = scaler.transform(X_val[numeric])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_linear = MultiOutputRegressor(LinearRegression())\n",
+    "\n",
+    "model_linear.fit(X_train, y_train)\n",
+    "predicted_linear = model_linear.predict(X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.mean(np.apply_along_axis(lambda x: (x[0]**2 + x[1]**2)**0.5, 1, np.abs(predicted_linear - y_val)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_fspace = {\n",
+    "    'kernel': hp.choice('criterion', [\"poly\", \"rbf\"]),\n",
+    "    'gamma': hp.chooice('gamma',['scale', 'auto']),\n",
+    "    \n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_svm = MultiOutputRegressor(SVR())\n",
+    "\n",
+    "model_svm.fit(X_train, y_train)\n",
+    "predicted_svm = model_svm.predict(X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.mean(np.apply_along_axis(lambda x: (x[0]**2 + x[1]**2)**0.5, 1, np.abs(predicted_svm - y_val)))"
    ]
   },
   {
